[package]
name = "fyrox-ui-sdl3"
version = "0.1.0"
authors = ["florianvazelle"]
edition = "2024"
description = "Integration of FyroxUI with SDL3"
license = "MIT"
repository = "https://github.com/florianvazelle/fyrox-ui-sdl3"
keywords = ["fyrox", "sdl3", "gui", "renderer"]
categories = ["gui", "rendering", "graphics"]
readme = "README.md"

[dependencies]
fyrox-ui = "0.36.2"
sdl3 = "0.16.1"

[build-dependencies]
shaderc = "0.10.1"

[dev-dependencies]

[[example]]
name = "demo"
